# katana_engine_opengl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Katana_Engine  Makefile  cmake_install.cmake  debug.compile  imgui.ini
.cache/clangd/index/: Input.hpp.A03CEBF0D55BA823.idx  KatanaEngine.hpp.937112422AFBAD3B.idx  LoadShaders.hpp.1C7F25076D682606.idx  RenderWindow.hpp.679A29C61C38F212.idx  imconfig.h.A979C71468A30D38.idx  imgui.h.D5B9A6B8ABFB20A4.idx  imgui_impl_opengl3.h.BA85ABB1FFD452DF.idx  imgui_impl_sdl.h.E0CBE62B6C3D305D.idx  imgui_sdl.h.A55A4AE943F3FE08.idx  input.cpp.7A1298DB74370CA2.idx  main.cpp.766FF2D0F2579A59.idx  renderwindow.cpp.FDDD3DDD0FB75866.idx
assets/Shaders/: SimpleFragmentShader.fshader  default.glsl
include/: Input.hpp  KatanaEngine.hpp  LoadShaders.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Window.hpp
include/components/: MeshRenderer.hpp  SpriteRenderer.hpp  Transform.hpp
include/gameobject/: Component.hpp  GameObject.hpp
include/math/: MathUtils.hpp  Vector.hpp
include/scene/: Camera.hpp  EditorScene.hpp  GameScene.hpp  Scene.hpp
include/util/: KatanaEngine.hpp  KeyboardListener.hpp  MouseListener.hpp  Texture.hpp  Time.hpp
src/: camera.cpp  editorscene.cpp  gameobject.cpp  gamescene.cpp  input.cpp  keyboardlistener.cpp  loadshaders.cpp  main.cpp  mathutils.cpp  meshrenderer.cpp  mouselistener.cpp  renderwindow.cpp  scene.cpp  shader.cpp  shape.cpp  spriterender.cpp  texture.cpp  time.cpp  transform.cpp  vector.cpp  window.cpp
textfiles/: drawing_textures.txt
